@@ -46,6 +46,10 @@
                 <div class="ib-arrow-top-right"></div>
                 <div class="ib-arrow-bottom-left"></div>
                 <div class="ib-arrow-bottom-right"></div>
+                <div class="ib-arrow-top-left-small"></div>
+                <div class="ib-arrow-top-right-small"></div>
+                <div class="ib-arrow-bottom-left-small"></div>
+                <div class="ib-arrow-bottom-right-small"></div>
                 <div class="ib-arrow-up-full"></div>
                 <div class="ib-arrow-down-full"></div>
                 <div class="ib-arrow-left-full"></div>
