@@ -113,6 +113,138 @@
   opacity: 0.5;
 }
 
+.ib-arrow-top-left-small {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-arrow-top-left-small:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-arrow-top-left-small:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-arrow-top-left-small:before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-left: 6px solid #282828;
+  border-top: 6px solid #282828;
+  border-radius: 0;
+  left: 0;
+  top: 0;
+}
+
+.ib-arrow-top-right-small {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-arrow-top-right-small:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-arrow-top-right-small:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-arrow-top-right-small:before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-right: 6px solid #282828;
+  border-top: 6px solid #282828;
+  border-radius: 0;
+  right: 0;
+  top: 0;
+}
+
+.ib-arrow-bottom-left-small {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-arrow-bottom-left-small:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-arrow-bottom-left-small:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-arrow-bottom-left-small:before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-left: 6px solid #282828;
+  border-bottom: 6px solid #282828;
+  border-radius: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.ib-arrow-bottom-right-small {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-arrow-bottom-right-small:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-arrow-bottom-right-small:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-arrow-bottom-right-small:before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-right: 6px solid #282828;
+  border-bottom: 6px solid #282828;
+  border-radius: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .ib-arrow-up-full {
   width: 24px;
   height: 24px;
