@@ -15,6 +15,10 @@
 @import "scss/arrows/arrow-top-right";
 @import "scss/arrows/arrow-bottom-left";
 @import "scss/arrows/arrow-bottom-right";
+@import "scss/arrows/arrow-top-left-small";
+@import "scss/arrows/arrow-top-right-small";
+@import "scss/arrows/arrow-bottom-left-small";
+@import "scss/arrows/arrow-bottom-right-small";
 @import "scss/arrows/arrow-up-full";
 @import "scss/arrows/arrow-down-full";
 @import "scss/arrows/arrow-left-full";
